Ensure page header buttons are aligned
Also ensures buttons with href work correctly.

--- a/src/css/components/page_header.scss
+++ b/src/css/components/page_header.scss
@@ -23,6 +23,7 @@
 }
 
 .page-header-actions {
-  flex: none;
+  display: flex;
+  flex-direction: row;
   margin-right: -$grid-1;
 }
